Issue function, Check function, Transaction function, Dashboard function